# rustmail

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.docs  LICENSE  Makefile  README.md  config.example.toml  package-lock.json  package.json
crates/rustmail/: Cargo.toml
crates/rustmail/src/: bot.rs  config.rs  main.rs
crates/rustmail/src/api/: mod.rs  router.rs
crates/rustmail/src/api/handler/: health.rs  mod.rs
crates/rustmail/src/api/middleware/: auth.rs  mod.rs  permissions.rs
crates/rustmail/src/api/routes/: admin.rs  apikeys.rs  auth.rs  bot.rs  categories.rs  mod.rs  panel.rs  user.rs
crates/rustmail/src/api/utils/: panel_permissions.rs  user_permissions.rs
crates/rustmail/src/commands/: mod.rs
crates/rustmail/src/commands/add_reminder/: common.rs
crates/rustmail/src/commands/add_staff/: common.rs
crates/rustmail/src/commands/alert/: common.rs
crates/rustmail/src/commands/anonreply/: mod.rs
crates/rustmail/src/commands/delete/: common.rs
crates/rustmail/src/commands/edit/: common.rs  message_ops.rs
crates/rustmail/src/commands/help/: common.rs
crates/rustmail/src/commands/logs/: common.rs
crates/rustmail/src/commands/move_thread/: common.rs
crates/rustmail/src/commands/new_thread/: common.rs
crates/rustmail/src/commands/ping/: mod.rs
crates/rustmail/src/commands/reminder_subscription/: mod.rs
crates/rustmail/src/commands/remove_staff/: common.rs
crates/rustmail/src/db/: repr.rs
crates/rustmail/src/db/operations/: api_keys.rs  banned_users.rs  features.rs  init.rs  messages.rs  mod.rs  reminder_optouts.rs  reminders.rs  scheduled.rs  snippets.rs  statistics.rs  threads.rs  ticket_categories.rs
crates/rustmail/src/errors/: dictionary.rs  types.rs
crates/rustmail/src/handlers/: guild_ban_handler.rs  guild_interaction_handler.rs  guild_messages_handler.rs  guild_moderation_handler.rs  mod.rs  ready_handler.rs  typing_proxy_handler.rs
crates/rustmail/src/handlers/audit_log/: mod.rs
crates/rustmail/src/i18n/: utils.rs
crates/rustmail/src/modules/: categories.rs  commands.rs  message_recovery.rs  mod.rs  reminders.rs  scheduled_closures.rs  threads.rs  threads_status.rs
crates/rustmail/src/prelude/: commands.rs  errors.rs  modules.rs
crates/rustmail/src/setup/: middleware.rs  router.rs  state.rs
crates/rustmail/src/types/: logs.rs  threads_status.rs
crates/rustmail/static/: index.html  rustmail_panel-bf294ba4d3706aca.js  rustmail_panel-bf294ba4d3706aca_bg.wasm  tailwind-5c2213ba84209876.css
crates/rustmail_panel/: Cargo.toml  index.html  tailwind.config.js
crates/rustmail_panel/src/: main.rs  router.rs  types.rs
crates/rustmail_panel/src/components/: bans.rs  categories.rs  configuration.rs  forbidden.rs  language_switcher.rs  mod.rs  navbar.rs  setup_detector.rs  ticket.rs
crates/rustmail_panel/src/i18n/: config.rs
crates/rustmail_panel/src/pages/: administration.rs  mod.rs  panel.rs  setup.rs
rustmail/: Cargo.toml
rustmail/src/: bot.rs  config.rs  main.rs
rustmail/src/api/: mod.rs  router.rs
rustmail/src/api/handler/: mod.rs
rustmail/src/api/middleware/: auth.rs  panel_permission.rs
rustmail/src/api/routes/: admin.rs  apikeys.rs  auth.rs  bot.rs  mod.rs  panel.rs  user.rs
rustmail/src/api/utils/: bot.rs  get_user_id_from_session.rs  mod.rs  panel_permissions.rs  permissions_cache.rs  ping_internal.rs
rustmail/src/commands/: mod.rs
rustmail/src/commands/add_reminder/: common.rs
rustmail/src/commands/add_staff/: common.rs  mod.rs
rustmail/src/commands/alert/: common.rs
rustmail/src/commands/anonreply/: mod.rs
rustmail/src/commands/close/: common.rs
rustmail/src/commands/delete/: common.rs
rustmail/src/commands/edit/: common.rs  message_ops.rs  mod.rs  validation.rs
rustmail/src/commands/force_close/: common.rs
rustmail/src/commands/help/: common.rs
rustmail/src/commands/logs/: common.rs
rustmail/src/commands/move_thread/: common.rs
rustmail/src/commands/new_thread/: common.rs
rustmail/src/commands/remove_staff/: common.rs
rustmail/src/commands/status/: common.rs  mod.rs
rustmail/src/commands/take/: common.rs  mod.rs
rustmail/src/db/: mod.rs  repr.rs
rustmail/src/db/operations/: init.rs  logs.rs  messages.rs  mod.rs  reminders.rs  scheduled.rs  threads.rs
rustmail/src/errors/: dictionary.rs  handler.rs  mod.rs  types.rs
rustmail/src/features/: mod.rs  poll.rs
rustmail/src/handlers/: guild_handler.rs  guild_interaction_handler.rs  guild_members_handler.rs  guild_message_reactions_handler.rs  guild_messages_handler.rs  guild_moderation_handler.rs  mod.rs  ready_handler.rs
rustmail/src/handlers/audit_log/: mod.rs
rustmail/src/i18n/: languages.rs  mod.rs
rustmail/src/i18n/language/: cn.rs  en.rs  fr.rs  gr.rs  it.rs  jp.rs  kr.rs  mod.rs  pr.rs  sp.rs
rustmail/src/modules/: commands.rs  message_recovery.rs  mod.rs  scheduled_closures.rs  threads.rs  threads_status.rs
rustmail/src/panel_commands/user/: mod.rs
rustmail/src/prelude/: config.rs  db.rs  errors.rs  handlers.rs  i18n.rs  mod.rs  panel_commands.rs
rustmail/src/types/: bot.rs  logs.rs  mod.rs  snippet.rs
rustmail/src/utils/: mod.rs
rustmail/src/utils/command/: category.rs  defer_response.rs  mod.rs  wrap_command.rs
rustmail/src/utils/conversion/: hex_string_to_int.rs  mod.rs
rustmail/src/utils/message/: category.rs  message_builder.rs  mod.rs
rustmail/src/utils/thread/: category.rs  fetch_thread.rs  get_thread_lock.rs  mod.rs  send_to_thread.rs  user_recap.rs
rustmail/src/utils/time/: get_member_join_date.rs  mod.rs
rustmail_panel/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
rustmail_panel/src/: main.rs  router.rs  types.rs
rustmail_panel/src/components/: api_keys.rs  configuration.rs  forbidden.rs  home.rs  language_switcher.rs  logout_button.rs  mod.rs  navbar.rs  statistics.rs  ticket.rs
rustmail_panel/src/i18n/: mod.rs  yew.rs
rustmail_panel/src/i18n/en/: en.json
rustmail_panel/src/i18n/fr/: fr.json
rustmail_panel/src/pages/: administration.rs  docs.rs  error.rs  home.rs  mod.rs  panel.rs
rustmail_panel/src/utils/: markdown.rs
(+494 files in other folders)
