[package]
name = "rustmail"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
serde = { version = "*", features = ["derive"] }
serenity = "0.12.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
toml = "0.9.7"
reqwest = "0.12.23"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.1"

[dependencies.uuid]
version = "1.18.1"
features = ["v4"]
