[package]
name = "rustmail"
version = "1.0.8"
edition = "2024"
license = "MIT"

[dependencies]
rustmail_types = { path = "../rustmail_types" }
serde = { version = "*", features = ["derive"] }
serenity = "0.12.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "signal"] }
toml = "0.9.7"
reqwest = { version = "0.12.23", features = ["json"] }
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.11.3"
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["cookie"] }
hyper = "1.8.1"
rust-embed = "8.9.0"
mime_guess = "2.0.5"
urlencoding = "2.1.3"
serde_json = "1.0.145"
rand = "0.9.2"
subtle = "2.6.1"
sha2 = "0.10.8"
hex = "0.4.3"
moka = { version = "0.12", features = ["future"] }
tower-http = { version = "0.6.7", features = ["compression-gzip", "compression-br"] }

[dependencies.uuid]
version = "1.18.1"
features = ["v4"]
