[package]
name = "rustmail"
version = "1.0.13"
edition = "2024"
license = "MIT"

[dependencies]
rustmail_types = { path = "../rustmail_types" }
serde = { version = "1.0.228", features = ["derive"] }
serenity = "0.12.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "signal"] }
toml = "0.9.8"
reqwest = { version = "0.12.25", features = ["json"] }
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
futures = "0.3.31"
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["cookie"] }
hyper = "1.8.1"
rust-embed = "8.9.0"
mime_guess = "2.0.5"
urlencoding = "2.1.3"
serde_json = "1.0.145"
rand = "0.9.2"
subtle = "2.6.1"
sha2 = "0.10.9"
hex = "0.4.3"
moka = { version = "0.12.11", features = ["future"] }
tower-http = { version = "0.6.8", features = ["compression-gzip", "compression-br"] }

[dependencies.uuid]
version = "1.19.0"
features = ["v4"]
