[package]
name = "rustmail_panel"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18.0"
wasm-bindgen-futures = "0.4.50"
gloo-net = "0.6.0"
gloo-utils = "0.2.0"
web-sys = "0.3.77"
serde_json = "1.0.145"
i18nrs = { version = "0.1.7", features = ["yew"] }
tailyew = "0.1.38"
serde = { version = "1.0.228", features = ["derive"] }
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
[build-dependencies]
navigator = "0.3.0"
