[package]
name = "rustmail_panel"
version = "1.0.12"
edition = "2024"
license = "MIT"

[dependencies]
rustmail_types = { path = "../rustmail_types" }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18.0"
wasm-bindgen-futures = "0.4.50"
gloo-net = "0.6.0"
gloo-utils = "0.2.0"
web-sys = { version = "0.3.77", features = ["HtmlSelectElement"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
js-sys = "0.3.82"
wasm-bindgen = "0.2.106"
urlencoding = "2.1.3"
ammonia = "4.1.2"
pulldown-cmark = "0.13.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
chrono-tz = { version = "0.10", features = ["serde"] }
[build-dependencies]
