[package]
name = "rustmail_panel"
version = "1.0.24"
edition = "2024"
license = "AGPL-3"

[dependencies]
rustmail_types = { path = "../rustmail_types" }
yew = { version = "0.22.0", features = ["csr"] }
yew-router = "0.19.0"
wasm-bindgen-futures = "0.4.56"
gloo-net = "0.6.0"
gloo-utils = "0.2.0"
web-sys = { version = "0.3.83", features = ["HtmlSelectElement", "File", "FileList", "FileReader", "HtmlInputElement", "DragEvent", "DataTransfer"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
js-sys = "0.3.83"
wasm-bindgen = "0.2.106"
urlencoding = "2.1.3"
ammonia = "4.1.2"
pulldown-cmark = "0.13.0"
chrono = { version = "0.4.43", features = ["serde", "wasmbind"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
